--- a/src/content/graphos/basics/routing.mdx
+++ b/src/content/graphos/basics/routing.mdx
@@ -129,12 +129,12 @@ Somes organizations might need to use Cloud Dedicated or self-hosted routing ins
 
 With the exception of Apollo-managed routing, self-hosted supergraphs benefit from all of the same GraphOS features as cloud supergraphs: metrics reporting, schema checks, the Explorer, etc.
 
-If you are interested in either Cloud Dedicated or self-hosted routing, don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales" eventName="content_contact_sales">get in touch</TrackableLink>.
+If you are interested in either Cloud Dedicated or self-hosted routing, don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?referrer=docs" eventName="content_contact_sales">get in touch</TrackableLink>.
 
 ## Setup and configuration
 
 For setup and configuration instructions, refer to the respective router documentation:
 
-- [Cloud router on shared infrastructure](./cloud)
-- [Cloud router on dedicated infrastucture](./cloud-dedicated)
-- [Self-hosted router](../quickstart/self-hosted)
+- [Cloud router on shared infrastructure](./quickstart/cloud)
+- [Cloud router on dedicated infrastucture](/graphos/cloud-routing/dedicated/quickstart)
+- [Self-hosted router](./quickstart/self-hosted)
