--- a/src/content/graphos/cloud-routing/configuration.mdx
+++ b/src/content/graphos/cloud-routing/configuration.mdx
@@ -9,7 +9,7 @@ After you [create a cloud supergraph](../quickstart/cloud/), you can view and ma
 <img
   className="screenshot"
   alt="Configuring the routing for your cloud supergraph in GraphOS Studio"
-  src="../../img/cloud-routing/configuration-main.jpg"
+  src="../img/cloud-routing/configuration-main.jpg"
 />
 
 This page shows the following information:
@@ -29,7 +29,7 @@ To add a new secret, click **Save a secret**. The following dialog appears:
 <img
   className="screenshot"
   alt="Adding a secret to your router"
-  src="../../img/cloud-routing/add-secret.jpg"
+  src="../img/cloud-routing/add-secret.jpg"
   width="500"
 />
 
