--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -23,7 +23,7 @@ To help resolve AWS VPC Lattice connection issues, we recommend enabling subgrap
 <img
   className="screenshot"
   alt="GraphOS Studio variant page"
-  src="../../../img/cloud-dedicated/studio-variant-page.png"
+  src="../../img/cloud-dedicated/studio-variant-page.png"
 />
 
 3. In the left sidebar menu, click **Settings**, then on **Cloud Router** to access the GraphOS Cloud settings page.
@@ -31,7 +31,7 @@ To help resolve AWS VPC Lattice connection issues, we recommend enabling subgrap
 <img
   className="screenshot"
   alt="GraphOS Studio Cloud Router settings page"
-  src="../../../img/cloud-dedicated/studio-settings-page.png"
+  src="../../img/cloud-dedicated/studio-settings-page.png"
 />
 
 4. In **Router configuration YAML**, ensure that the following configuration block that sets `include_subgraph_errors` is present:
@@ -46,7 +46,7 @@ include_subgraph_errors:
 <img
   className="screenshot"
   alt="GraphOS Studio Router configuration YAML"
-  src="../../../img/cloud-dedicated/router-yaml-subgraph-errors.png"
+  src="../../img/cloud-dedicated/router-yaml-subgraph-errors.png"
 />
 
 Configuration changes trigger a new launch. Please wait a few minutes for your cloud router to update with this new configuration. You can monitor the deployment status in the Launches page for your graph variant.
@@ -58,6 +58,7 @@ Once you've identißfied and resolved the underlying issue, we recommend you tur
 If you encounter an error or not listed below and need assistance, don't hesitate to <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">get in touch</TrackableLink>. We're here to help.
 
 ### Overriding `host` headers
+
 AWS Lattice relies on the `host` header to properly secure and route requests. It is not possible to modify this header on Cloud Dedicated. Instead, consider using a header like `x-host`. You can rewrite an incoming `host` header as `x-host` with router config (see below).
 
 ```yaml title="router.yaml"
@@ -105,7 +106,7 @@ You can validate that your Lattice services are configured to receive traffic on
 <img
   className="screenshot"
   alt="AWS VPC service page left menu"
-  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+  src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
   width="175px"
 />
 
@@ -114,7 +115,7 @@ You can validate that your Lattice services are configured to receive traffic on
 <img
   className="screenshot"
   alt="AWS VPC Lattice service"
-  src="../../../img/cloud-dedicated/vpc-lattice-service.png"
+  src="../../img/cloud-dedicated/vpc-lattice-service.png"
 />
 
 4. Click the **Routing** tab.
@@ -122,7 +123,7 @@ You can validate that your Lattice services are configured to receive traffic on
 <img
   className="screenshot"
   alt="AWS VPC Lattice routing"
-  src="../../../img/cloud-dedicated/vpc-lattice-routing.png"
+  src="../../img/cloud-dedicated/vpc-lattice-routing.png"
 />
 
 5. Validate that you have a listener with a `protocol:port` configuration of **HTTPS:443**.
@@ -151,7 +152,7 @@ You can validate that your Lattice services are configured to allow traffic from
 <img
   className="screenshot"
   alt="AWS VPC service page left menu"
-  src="../../../img/cloud-dedicated/vpc-lattice-menu.jpg"
+  src="../../img/cloud-dedicated/vpc-lattice-menu.jpg"
   width="175px"
 />
 
@@ -160,7 +161,7 @@ You can validate that your Lattice services are configured to allow traffic from
 <img
   className="screenshot"
   alt="AWS VPC Lattice service"
-  src="../../../img/cloud-dedicated/vpc-lattice-service.png"
+  src="../../img/cloud-dedicated/vpc-lattice-service.png"
 />
 
 4. Click the **Access** tab.
