--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -41,7 +41,7 @@ When you first create a variant, the router provisioning process can take a few 
 <img
   className="screenshot"
   alt="Label in Studio indicating a router hasn't finished provisioning"
-  src="../../img/initiating-endpoint.jpg"
+  src="../img/initiating-endpoint.jpg"
   width="500"
 />
 
@@ -81,7 +81,7 @@ This does not apply cloud routers on the Dedicated plan.
 
 </Note>
 
-**Apollo automatically deletes variants of Serverless cloud supergraphs that receive zero operations for 60 consecutive days.** This deletes the router, along with all of the variant's historical metrics.
+**Apollo automatically deletes variants of Serverless cloud supergraphs that receive zero operations for 60 consecutive days.** This deletes the router, along with all the variant's historical metrics.
 
 - Apollo will notify you via email whenever a Serverless variant is approaching this 60-day limit.
 - To prevent deletion, execute at least one GraphQL operation on the variant's router before the 60-day limit.
@@ -112,7 +112,7 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 #### Which regions are available for cloud routers?
 
-Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
+Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10 ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
 Cloud routing on the [Dedicated](./cloud-dedicated) plan has a wider variety of options. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
 
