--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -121,7 +121,7 @@ The router automatically reports certain operation metrics to GraphOS, so you do
 
 <Tip>
 
-[Learn more about cloud routing.](../routing/cloud/)
+[Learn more about cloud routing.](../cloud-routing)
 
 </Tip>
 
