--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -314,7 +314,7 @@ cors:
 
 <Tip>
 
-For advanced CORS options, see [Configuring cloud routing](../routing/cloud-configuration#cors-settings).
+For advanced CORS options, see [Configuring cloud routing](/graphos/cloud-routing/configuration#cors-settings).
 
 </Tip>
 
