--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -6,7 +6,7 @@ description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
 
 <PreviewFeature>
 
-Cloud Dedicated is currently in invite-only [preview](/graphos/routing/cloud-dedicated#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
+Cloud Dedicated is currently in invite-only [preview](/graphos/cloud-routing/dedicated#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
 
 </PreviewFeature>
 
@@ -60,7 +60,7 @@ Each change you make to your router configuration and each change to your superg
 
 To test your graph is working as intended, head over to Explorer and run a sample query. You may want to enable subgraph error reporting if you run into issues.
 
-Finally, we recommend running a load test to determine how much [throughput capacity](/graphos/routing/cloud-dedicated/throughput) you need to run your graph.
+Finally, we recommend running a load test to determine how much [throughput capacity](./throughput) you need to run your graph.
 
 You may want to add additional variants to your graph. You can do that by going to Settings, This Graph, and Variants:
 
