--- a/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
+++ b/src/content/technotes/TN0015-router-to-apm-via-opentelemetry.mdx
@@ -9,7 +9,7 @@ tags: [observability, router]
 
 <EnterpriseFeature>
 
-Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/routing/cloud/). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.
+Self-hosting the Apollo Router is limited to [GraphOS Enterprise plans](/graphos/enterprise/). Other plan types use [managed cloud routing with GraphOS](/graphos/cloud-routing). Check out the [pricing page](https://www.apollographql.com/pricing/) to learn more.
 
 </EnterpriseFeature>
 
@@ -90,8 +90,8 @@ telemetry:
       endpoint: http://COLLECTOR_ADDRESS:4317
   tracing:
     trace_config:
-      service_name: "router"
-      service_namespace: "apollo"
+      service_name: 'router'
+      service_namespace: 'apollo'
     otlp:
       endpoint: http://COLLECTOR_ADDRESS:4317
 ```
@@ -115,16 +115,16 @@ telemetry:
       endpoint: https://otlp.nr-data.net
       grpc:
         metadata:
-          "api-key": ["${env.NEW_RELIC_LICENSE_KEY}"]
+          'api-key': ['${env.NEW_RELIC_LICENSE_KEY}']
   tracing:
     trace_config:
-      service_name: "router"
-      service_namespace: "apollo"
+      service_name: 'router'
+      service_namespace: 'apollo'
     otlp:
       endpoint: https://otlp.nr-data.net
       grpc:
         metadata:
-          "api-key": ["${env.NEW_RELIC_LICENSE_KEY}"]
+          'api-key': ['${env.NEW_RELIC_LICENSE_KEY}']
 ```
 
 This uses the `NEW_RELIC_LICENSE_KEY` environment variable for passing the key using the router's [variable expansion feature](/router/configuration/overview#variable-expansion) to avoid including sensitive tokens in the configuration.
