--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -47,7 +47,7 @@ When you first create a variant, the router provisioning process can take a few 
 
 ## Configuring your router
 
-See [Configuring cloud routing](./cloud-configuration).
+See [Configuring cloud routing](./configuration).
 
 ### Cloud launches
 
@@ -67,7 +67,7 @@ Router releases go through rigorous testing before deployment on GraphOS Cloud. 
 
 <Note>
 
-Opting out of router updates to cloud routers is currently not possible. Advanced version management will be available in [Cloud Dedicated](./cloud-dedicated) in 2024.
+Opting out of router updates to cloud routers is currently not possible. Advanced version management will be available in [Cloud Dedicated](./dedicated) in 2024.
 
 </Note>
 
@@ -88,11 +88,11 @@ This does not apply cloud routers on the Dedicated plan.
 
 ## Out of memory errors
 
-You may receive out of memory errors when using cloud routers on the [Serverless plan](./#router-comparison). Since the Serverless plan offers limited underlying compute resources, Serverless cloud routing offers a fixed amount of throughput capacity.
+You may receive out of memory errors when using cloud routers on the [Serverless plan](/graphos/routing#router-comparison). Since the Serverless plan offers limited underlying compute resources, Serverless cloud routing offers a fixed amount of throughput capacity.
 
 Complex schemas may exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types. Additionally, complex queries that return too much data or query too many subgraphs simultaneously may fail.
 
-You can upgrade to [Cloud Dedicated](./cloud-dedicated) for control over scaling and performance. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> for a free trial.
+You can upgrade to [Cloud Dedicated](./dedicated) for control over scaling and performance. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> for a free trial.
 
 ## Cloud routing FAQ
 
@@ -114,11 +114,11 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10 ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
-Cloud routing on the [Dedicated](./cloud-dedicated) plan has a wider variety of options. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
+Cloud routing on the [Dedicated](./dedicated) plan has a wider variety of options. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
 
 #### Can I choose my cloud router's region?
 
-Choice of region for cloud routers is only available on the [Dedicated](./cloud-dedicated) plan.
+Choice of region for cloud routers is only available on the [Dedicated](./dedicated) plan.
 
 #### Does GraphOS also host my individual subgraphs?
 
