Create and use DedicatedPreview component

--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -4,11 +4,7 @@ subtitle: Troubleshoot common issues and errors with AWS Lattice
 description: Troubleshoot common issues and errors with AWS Lattice and an Apollo Cloud Dedicated router
 ---
 
-<PreviewFeature>
-
-Cloud Dedicated is currently in invite-only [preview](/graphos/cloud-routing/dedicated#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
-
-</PreviewFeature>
+<DedicatedPreview />
 
 To learn how to configure AWS VPC Lattice to send traffic to your subgraphs, refer to the [configuration docs](./lattice).
 
