--- a/src/content/graphos/cloud-routing/dedicated/index.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/index.mdx
@@ -4,11 +4,7 @@ subtitle: Learn about the Cloud Dedicated offering and pricing
 description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
 ---
 
-<PreviewFeature>
-
-Cloud Dedicated is currently in invite-only [preview](#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
-
-</PreviewFeature>
+<DedicatedPreview />
 
 GraphOS **Cloud Dedicated** is the Apollo offering that lets you run a cloud router on dedicated, pre-provisioned infrastructure that you control and scale. It gives you access to a fully managed and monitored fleet of Apollo Routers. This approach lets you implement and scale your supergraph without managing any additional infrastructure. Tailored for teams handling production-grade workloads, Cloud Dedicated offers additional control over performance and security.
 
