--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -4,11 +4,7 @@ subtitle: Configure AWS VPC Lattice to communicate with your Cloud Dedicated rou
 description: Configure AWS VPC Lattice to send and receive traffic to and from your Apollo Cloud Dedicated router
 ---
 
-<PreviewFeature>
-
-Cloud Dedicated is currently in invite-only [preview](/graphos/cloud-routing/dedicated#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
-
-</PreviewFeature>
+<DedicatedPreview />
 
 Cloud Dedicated uses [AWS VPC Lattice](https://aws.amazon.com/vpc/lattice/) to send traffic to your subgraphs running in an AWS VPC without exposing them to the internet. With Lattice, you can define services and share them with the Apollo AWS organization.
 
