--- a/src/content/graphos/cloud-routing/dedicated/throughput.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/throughput.mdx
@@ -4,11 +4,7 @@ subtitle: Understanding GCU performance and scaling
 description: Learn about Apollo's dedicated cloud routing for GraphQL APIs
 ---
 
-<PreviewFeature>
-
-Cloud Dedicated is currently in invite-only [preview](/graphos/cloud-routing/dedicated#private-preview). Don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> if you'd like to request access or have any questions or feedback.
-
-</PreviewFeature>
+<DedicatedPreview />
 
 From a single GCU, you can expect the following performance:
 
