Fix broken link
Updates the reference to new Apollo's plans website URL.

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -15,7 +15,7 @@ You can review the results of schema checks inside GraphOS Studio from your grap
   width="300"
 />
 
-With the exception of [contract checks](#types-of-checks), schema checks are **free** as part of [all Apollo plans](https://www.apollographql.com/plans/).
+With the exception of [contract checks](#types-of-checks), schema checks are **free** as part of [all Apollo plans](https://www.apollographql.com/pricing/).
 
 ## Types of checks
 
