Edit other cloud routing pages

--- a/src/content/graphos/cloud-routing/configuration.mdx
+++ b/src/content/graphos/cloud-routing/configuration.mdx
@@ -1,5 +1,5 @@
 ---
-title: Configuring cloud routing
+title: Cloud router configuration
 subtitle: Learn how to configure cloud routers in GraphOS Studio
 description: Learn how to configure cloud routers and manage secrets in GraphOS Studio
 ---
