--- a/src/content/graphos/cloud-routing/dedicated/lattice.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice.mdx
@@ -33,7 +33,7 @@ flowchart LR;
 
 <Note>
 
-- You can only use Lattice for subgraphs in the **same AWS region as your cloud router**. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">let us know</TrackableLink>.
+- You can only use Lattice for subgraphs in the **same AWS region as your cloud router**. If you need to run subgraphs in different AWS regions or run your workloads in a region not yet supported by Cloud Dedicated, please <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">let us know</TrackableLink>.
 - Using AWS VPC Lattice incurs costs outside of your Cloud Dedicated spend. Refer to the [Lattice pricing page](https://aws.amazon.com/vpc/lattice/pricing/) to learn more.
 
 </Note>
@@ -556,7 +556,7 @@ To update a Lattice service's authorization policy with additional restrictions,
 
 #### Obtain account ID and graph ref
 
-- <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Contact Apollo</TrackableLink> to obtain your account ID. Specify you would like the account ID needed to update your Lattice service's authorization policy.
+- <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Apollo</TrackableLink> to obtain your account ID. Specify you would like the account ID needed to update your Lattice service's authorization policy.
 
   <Note>
 
