--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -51,7 +51,7 @@ Once you've identißfied and resolved the underlying issue, we recommend you tur
 
 ## Common issues and errors
 
-If you encounter an error or not listed below and need assistance, don't hesitate to <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">get in touch</TrackableLink>. We're here to help.
+If you encounter an error or not listed below and need assistance, don't hesitate to <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink>. We're here to help.
 
 ### Overriding `host` headers
 
