--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -7,13 +7,13 @@ description: Learn more about Apollo-managed cloud routers that route requests t
 <Note>
 
 **Cloud supergraphs are only available to organizations with Apollo Serverless and Dedicated plans.**
-They are _not_ available to organizations with an Enterprise plan or a legacy Free or Team plan.
+They are not available to organizations with an Enterprise plan or a legacy Free or Team plan.
 
 [See plan details.](https://www.apollographql.com/pricing/)
 
 </Note>
 
-When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with GraphOS Studio, GraphOS automatically provisions and manages a **router** that acts as an entry point to your GraphQL APIs. In this architecture, individual GraphQL APIs are called **subgraphs**. Clients send operations to your router's public endpoint, _instead of_ sending them directly to your subgraphs.
+When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with GraphOS Studio, GraphOS automatically provisions and manages a **router** that acts as an entry point to your GraphQL APIs. In this architecture, individual GraphQL APIs are called **subgraphs**. Clients send operations to your router's public endpoint, instead of sending them directly to your subgraphs.
 
 ```mermaid
 flowchart LR;
@@ -34,7 +34,7 @@ flowchart LR;
 
 ## Initializing your router
 
-Your router is provisioned _automatically_ whenever you [create a cloud supergraph in GraphOS Studio](../quickstart/cloud), or whenever you create a new [variant](../graphs/#variants) for an existing cloud supergraph. Each variant has its own distinct router.
+Your router is provisioned automatically whenever you [create a cloud supergraph in GraphOS Studio](../quickstart/cloud), or whenever you create a new [variant](../graphs/#variants) for an existing cloud supergraph. Each variant has its own distinct router.
 
 When you first create a variant, the router provisioning process can take a few minutes. If this process hasn't completed yet for a particular variant, an **INITIATING ENDPOINT** label is shown at the top of the variant's page in Studio:
 
@@ -47,7 +47,7 @@ When you first create a variant, the router provisioning process can take a few 
 
 ## Configuring your router
 
-See [Configuring cloud routing](./configuration).
+See [Cloud router configuration](./configuration).
 
 ### Cloud launches
 
@@ -92,7 +92,7 @@ You may receive out of memory errors when using cloud routers on the [Serverless
 
 Complex schemas may exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types. Additionally, complex queries that return too much data or query too many subgraphs simultaneously may fail.
 
-You can upgrade to [Cloud Dedicated](./dedicated) for control over scaling and performance. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> for a free trial.
+You can upgrade to [Cloud Dedicated](./dedicated) for control over scaling and performance. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> for a free trial.
 
 ## Cloud routing FAQ
 
@@ -114,7 +114,7 @@ Apollo works with major public cloud providers to deliver GraphOS cloud routing.
 
 Cloud routing for Serverless plans is only available in Chicago, USA. Our infrastructure has interconnects with major public cloud providers, so latency is minimal. For example, latency between Chicago and AWS in Virginia is approximately 10 ms. If there's a specific region you'd like us to support please [request a region](https://docs.google.com/forms/d/e/1FAIpQLSeLfIHulp-45VYzZspkOslFMzd1pPnMtVgIj_pVyJbox5DCKw/viewform).
 
-Cloud routing on the [Dedicated](./dedicated) plan has a wider variety of options. <TrackableLink href="mailto:cloud@apollographql.com" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
+Cloud routing on the [Dedicated](./dedicated) plan has a wider variety of options. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Get in touch</TrackableLink> to learn more.
 
 #### Can I choose my cloud router's region?
 
